--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body{
     font-family: sans-serif;
     margin: 0;
     background-color: var(--background-color);
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 h1, p{
@@ -119,5 +121,74 @@ header .title{
 
     nav{
         justify-content: start;
+    }
+}
+
+/* SECTION */
+section{
+    padding: 10px 0;
+}
+
+@media screen and (min-width: 768px){
+    section{
+        padding: 30px 20px;
+    }
+}
+
+/* POSTER */
+.poster-container{
+    border: solid 1px var(--primary-color);
+}
+
+.poster-container:hover{
+    cursor: pointer;
+}
+
+.poster-container:hover .poster__title, .poster-container:hover .poster__author{
+    color: var(--white-color);
+}
+
+.poster-header, .poster-body{
+    padding: 10px;
+}
+
+.poster-header{
+    background-color: var(--primary-color);
+    color: var(--grey-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1rem;
+}
+
+.poster__title{
+    font-size: 1.4rem;
+}
+
+@media screen and (min-width: 768px){
+    .poster-header{
+        font-size: 1.3rem;
+    }
+
+    .poster-body{
+        font-size: 1.2rem;
+    }
+
+    .poster__title{
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .poster-header{
+        font-size: 1.5rem;
+    }
+
+    .poster-body{
+        font-size: 1.5rem;
+    }
+
+    .poster__title{
+        font-size: 2.5rem;
     }
 }
