--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,22 +1,5 @@
 <section>
-    <div class="poster-container">
-        <div class="poster-header">
-            <span class="poster__title">Why MVC is so important</span>
-            <span class="poster__author">Posted by Thinh 05/07/2024</span>
-        </div>
-        <div class="poster-body">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique odio nobis assumenda tempora
-                numquam iusto laboriosam obcaecati iure suscipit sint!</p>
-        </div>
-    </div>
-    <div class="poster-container">
-        <div class="poster-header">
-            <span class="poster__title">Why MVC is so important</span>
-            <span class="poster__author">Posted by Thinh 05/07/2024</span>
-        </div>
-        <div class="poster-body">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique odio nobis assumenda tempora
-                numquam iusto laboriosam obcaecati iure suscipit sint!</p>
-        </div>
-    </div>
+    {{#each posters as |poster|}}
+    {{> poster-details}}
+    {{/each}}
 </section>
