--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,52 @@ h3{
     font-size: 1.8rem;
 }
 
+.btn--add{
+    margin-top: 15px;
+    width: auto;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 0;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+}
+
+/* FORM */
+.form-group{
+    margin-bottom: 20px;
+}
+
+.form-group label{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+}
+
+textarea{
+    resize: none;
+    width: 100%;
+    height: 90px;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px 0;
+    margin-top: 5px;
+}
+
 /* NAVIGATION */
 header{
     background-color: var(--primary-color);
     padding: 30px 0;
+    margin-bottom: 30px;
 }
 
 nav{
@@ -223,11 +265,7 @@ section{
     margin-bottom: 30px;
 }
 
-.from-group label{
-    font-size: 1.5rem;
-}
-
-.comment-area{
+/* .comment-area{
     resize: none;
     width: 100%;
     height: 90px;
@@ -235,7 +273,7 @@ section{
     border-radius: 10px;
     margin: 10px 0;
     margin-top: 5px;
-}
+} */
 
 @media screen and (min-width: 768px){
     .comment-container, .comment__conten{
@@ -247,4 +285,21 @@ section{
     .comment-container, .comment__conten{
         font-size: 1.5rem;
     }
+}
+
+/* DASHBOARD */
+.dashboard-container{
+    border: 2px solid var(--primary-color);
+}
+
+.dashboard-title{
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    font-size: 2.1rem;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+}
+
+.dashboard-body{
+    padding: 15px;
 }
