fix the relationship between User and Poster

--- a/views/partials/poster-details.handlebars
+++ b/views/partials/poster-details.handlebars
@@ -1,7 +1,7 @@
 <div class="poster-container">
     <div class="poster-header">
         <span class="poster__title">{{title}}</span>
-        <span class="poster__author">Posted by {{userName}} 05/07/2024</span>
+        <span class="poster__author">Posted by {{user.user_name}} 05/07/2024</span>
     </div>
     <div class="poster-body">
         <p>{{content}}</p>
