--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,22 @@ section{
     padding: 10px 0;
 }
 
+.section-container{
+    border: 2px solid var(--primary-color);
+}
+
+.section-header{
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    font-size: 2.1rem;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+}
+
+.section-body{
+    padding: 15px;
+}
+
 @media screen and (min-width: 768px){
     section{
         padding: 30px 20px;
