--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,15 +71,71 @@ h3{
     font-size: 1.8rem;
 }
 
+.btn--add{
+    margin-top: 15px;
+    width: auto;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 0;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.btn--logout{
+    border: none;
+    background-color: unset;
+    color: var(--white-color);
+    padding: 0;
+    margin: 0;
+}
+
+.btn--logout:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+}
+
+/* FORM */
+.form-group{
+    margin-bottom: 20px;
+}
+
+.form-group label{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+}
+
+textarea{
+    resize: none;
+    width: 100%;
+    height: 90px;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px 0;
+    margin-top: 5px;
+}
+
 /* NAVIGATION */
 header{
     background-color: var(--primary-color);
     padding: 30px 0;
+    margin-bottom: 30px;
 }
 
 nav{
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-bottom: 20px;
 }
 
@@ -114,7 +170,7 @@ header .title{
         margin-bottom: 30px;
     }
 
-    nav .list-item .link{
+    nav .list-item .link, nav .list-item .btn--logout{
         font-size: 2.5rem;
     }
 
@@ -140,6 +196,22 @@ header .title{
 /* SECTION */
 section{
     padding: 10px 0;
+}
+
+.section-container{
+    border: 2px solid var(--primary-color);
+}
+
+.section-header{
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    font-size: 2.1rem;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+}
+
+.section-body{
+    padding: 15px;
 }
 
 @media screen and (min-width: 768px){
@@ -223,11 +295,7 @@ section{
     margin-bottom: 30px;
 }
 
-.from-group label{
-    font-size: 1.5rem;
-}
-
-.comment-area{
+/* .comment-area{
     resize: none;
     width: 100%;
     height: 90px;
@@ -235,7 +303,7 @@ section{
     border-radius: 10px;
     margin: 10px 0;
     margin-top: 5px;
-}
+} */
 
 @media screen and (min-width: 768px){
     .comment-container, .comment__conten{
@@ -247,4 +315,25 @@ section{
     .comment-container, .comment__conten{
         font-size: 1.5rem;
     }
+}
+
+/* DASHBOARD */
+.dashboard-container{
+    border: 2px solid var(--primary-color);
+}
+
+.dashboard-title{
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    font-size: 2.1rem;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+}
+
+.dashboard-body{
+    padding: 15px;
+}
+
+.dashboard-body a{
+    margin-top: 40px;
 }
