modify main page to be more responsive

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,5 +21,7 @@
     <div class="btn-container">
         <button class="btn btn--add">+ New Post</button>
     </div>
+    {{else}}
+    <h2>Please <a href="/login" class="link">log in</a> your account to review your posts</h2>
     {{/if}}
 </section>
