--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,23 @@
 <section>
-    <div class="section-container">
-        <div class="section-header">
-            <span>Login</span>
+    <form id="login-form">
+        <div class="section-container">
+            <div class="section-header">
+                <span>Login</span>
+            </div>
+            <div class="section-body">
+                <div class="form-group">
+                    <label for="user-name">Username</label>
+                    <input type="text" id="usernameInput" name="user-name" class="input" autocomplete="off">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="passwordInput" name="password" class="input" autocomplete="off">
+                </div>
+                <button class="btn" id="login-btn" type="submit">Login</button>
+                <div style="margin-top: 20px;">
+                    <a href="/signup" class="link">Sign Up!</a>
+                </div>
+            </div>
         </div>
-        <div class="section-body">
-            <div class="form-group">
-                <label for="user-name">Username</label>
-                <input type="text" id="user-name" name="user-name" class="input">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" class="input">
-            </div>
-            <button class="btn">Login</button>
-            <div style="margin-top: 20px;">
-                <a href="/signup" class="link">Sign Up!</a>
-            </div>
-        </div>
-    </div>
+    </form>
 </section>
