--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,19 @@ h3{
     color: var(--white-color);
 }
 
+.btn--logout{
+    border: none;
+    background-color: unset;
+    color: var(--white-color);
+    padding: 0;
+    margin: 0;
+}
+
+.btn--logout:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .btn-container{
     display: flex;
     justify-content: center;
@@ -112,6 +125,11 @@ textarea{
     margin-top: 5px;
 }
 
+/* POSTER FORM */
+#post-form {
+    display: none;
+}
+
 /* NAVIGATION */
 header{
     background-color: var(--primary-color);
@@ -122,6 +140,7 @@ header{
 nav{
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-bottom: 20px;
 }
 
@@ -156,7 +175,7 @@ header .title{
         margin-bottom: 30px;
     }
 
-    nav .list-item .link{
+    nav .list-item .link, nav .list-item .btn--logout{
         font-size: 2.5rem;
     }
 
