modify dashboard-details handlebars to display all posters of a user.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,7 @@
 <section>
+    {{#each posters as |poster|}}
+    {{> dashboard-details}}
+    {{/each}}
     {{#if loggedIn}}
     <form id="post-form">
         <div class="section-container">
