build dashboard post method to create new post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,18 +11,18 @@
             <div class="section-body">
                 <div class="form-group">
                     <label for="title">Title</label>
-                    <input type="text" id="new-poster-title" name="title" class="input">
+                    <input type="text" id="new-post-title" name="title" class="input">
                 </div>
                 <div class="form-group">
                     <label for="content">Content</label>
-                    <textarea name="content" id="new-poster-content"></textarea>
+                    <textarea name="content" id="new-post-content"></textarea>
                 </div>
                 <button class="btn" type="submit">Create</button>
             </div>
         </div>
     </form>
     <div class="btn-container">
-        <button class="btn btn--add" id="addNewPostBtn">+ New Post</button>
+        <button class="btn btn--add" id="add-new-post-btn">+ New Post</button>
     </div>
     {{else}}
     <h2>Please <a href="/login" class="link">log in</a> to modify your posts</h2>
