--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<section>
+{{!-- <section>
     <div class="section-container">
         <div class="section-header">
             <span>Sign Up</span>
@@ -18,4 +18,27 @@
             </div>
         </div>
     </div>
+</section> --}}
+<section>
+    <form id="signup-form">
+        <div class="section-container">
+            <div class="section-header">
+                <span>Sign Up</span>
+            </div>
+            <div class="section-body">
+                <div class="form-group">
+                    <label for="user-name">Username</label>
+                    <input type="text" id="usernameInput" name="user-name" class="input" autocomplete="off">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="passwordInput" name="password" class="input" autocomplete="off">
+                </div>
+                <button class="btn" id="login-btn" type="submit">Sign Up</button>
+                <div style="margin-top: 20px;">
+                    <a href="/login" class="link">Sign In!</a>
+                </div>
+            </div>
+        </div>
+    </form>
 </section>
