modify dashboard page

--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -1,8 +1,7 @@
-<div class="poster-container">
-    <div class="poster-header">
-        <span class="poster__title">{{title}}</span>
+<a href="/dashboard/post/{{id}}" class="post-editor-link">
+    <div class="poster-container">
+        <div class="poster-header">
+            <span class="poster__title">{{title}}</span>
+        </div>
     </div>
-    <div class="poster-body">
-        <p>{{content}}</p>
-    </div>
-</div>
+</a>
