build comment form

--- a/views/post-comment.handlebars
+++ b/views/post-comment.handlebars
@@ -14,7 +14,7 @@
     <form id="comment-form" data-post-id="{{post.id}}">
         <div class="form-group">
             <label for="comment">Your Comment</label>
-            <textarea name="commend" id="comment" class="comment-area" placeholder="Write a comment..."></textarea>
+            <textarea name="commend" id="comment-input" class="comment-area" placeholder="Write a comment..."></textarea>
         </div>
         <button class="btn" type="submit">Submit</button>
     </form>
