update code to add date

--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -5,6 +5,6 @@
         </span>
     </div>
     <div class="comment__author">
-        <span>{{user.user_name}}, 05/07/2024</span>
+        <span>{{user.user_name}}, {{formatDate createdAt}}</span>
     </div>
 </div>
